@@ -5,19 +5,17 @@ import java.math.RoundingMode;
 import java.time.Clock;
 import java.time.Duration;
 import java.time.Instant;
+import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
-import java.util.Locale;
 import java.util.Optional;
-import java.util.regex.Pattern;
+import java.util.stream.Stream;
 import org.springframework.http.HttpHeaders;
 
 public final class RetryAfterSupport {
 
-  // "+10", "10", "0", "0.1", "10.000"
-  private static final Pattern DELTA_SECONDS = Pattern.compile("\\+?\\d+(?:\\.\\d+)?");
-  private static final DateTimeFormatter RFC1123_US =
-      DateTimeFormatter.RFC_1123_DATE_TIME.withLocale(Locale.US);
+  private static final String XR_RETRY = "X-Ratelimit-Retry";
+  private static final String XR_RESET = "X-Ratelimit-Reset";
+  private static final String XR_REMAIN = "X-Ratelimit-Remaining";
 
   private RetryAfterSupport() {
   }
@@ -32,82 +30,104 @@ public final class RetryAfterSupport {
   /**
    * Перегрузка с Clock (удобно для тестов).
    */
-  static Duration parse(HttpHeaders headers, Clock clock, Duration fallback) {
-    // 1) Стандартный Retry-After
-    String retryAfter = headers.getFirst(HttpHeaders.RETRY_AFTER);
+  static Duration parse(HttpHeaders h, Clock clock, Duration fallback) {
+    Optional<Duration> candidate =
+        Stream.<Optional<Duration>>of(
+                header(h, XR_RETRY).flatMap(RetryAfterSupport::parseDeltaSeconds),
 
-    // 2) WB кастомные хедеры
-    String xrRetry = headers.getFirst("X-Ratelimit-Retry");
-    String xrReset = headers.getFirst("X-Ratelimit-Reset");
-    String xrRemain = headers.getFirst("X-Ratelimit-Remaining");
+                isZero(h.getFirst(XR_REMAIN))
+                    ? header(h, XR_RESET).flatMap(v -> parseReset(v, clock))
+                    : Optional.empty(),   // важно: <Duration>
 
-    // Приоритет:
-    //   а) X-Ratelimit-Retry — СКОЛЬКО секунд ждать
-    //   б) если Remaining == 0 и есть Reset — ждать до восстановления всплеска
-    //   в) Retry-After (RFC1123 дата или дельта)
-    //   г) fallback
-    Optional<Duration> result =
-        firstNonEmpty(xrRetry)
-            .flatMap(RetryAfterSupport::parseDeltaSeconds)
-            .or(() -> (isZero(xrRemain) && firstNonEmpty(xrReset).isPresent())
-                ? parseDeltaSeconds(xrReset)
-                : Optional.empty())
-            .or(() -> firstNonEmpty(retryAfter)
-                .flatMap(v -> parseDeltaSeconds(v)
-                    .or(() -> parseHttpDate(v, clock))));
+                header(h, HttpHeaders.RETRY_AFTER).flatMap(v ->
+                    parseDeltaSeconds(v).or(() -> parseHttpDate(v, clock))
+                )
+            )
+            .flatMap(Optional::stream)
+            .findFirst();
 
-    return result
+    return candidate
         .map(RetryAfterSupport::nonNegative)
         .orElse(fallback);
   }
 
   /* ----------------- helpers ----------------- */
 
-  private static Optional<String> firstNonEmpty(String s) {
-    return (s == null || s.trim().isEmpty()) ? Optional.empty() : Optional.of(s.trim());
-  }
-
-  private static boolean isZero(String s) {
-    return s != null && s.trim().equals("0");
+  // Дополнительно, чтобы быть совместимым и с X-RateLimit-* (другие регистры):
+  private static Optional<String> header(HttpHeaders h, String name) {
+    String v = h.getFirst(name);
+    if (v == null) {
+      v = h.getFirst(name.replace("Ratelimit", "RateLimit"));
+    }
+    return (v == null || v.isBlank()) ? Optional.empty() : Optional.of(v.trim());
   }
 
   /**
-   * Поддерживает "+10", "10", "0", "0.1", "10.000" (секунды/дробные секунды).
+   * Ноль как число: "0", "00", "0.0" → true. Нечисло → false.
    */
-  private static Optional<Duration> parseDeltaSeconds(String v) {
-    if (!DELTA_SECONDS.matcher(v).matches()) {
-      return Optional.empty();
+  private static boolean isZero(String v) {
+    if (v == null || v.isBlank()) {
+      return false;
     }
     try {
-      if (v.indexOf('.') < 0) {
-        String s = (v.charAt(0) == '+') ? v.substring(1) : v;
-        long sec = Long.parseUnsignedLong(s);
-        return Optional.of(Duration.ofSeconds(sec));
-      } else {
-        long ceilSec = new BigDecimal(v).setScale(0, RoundingMode.CEILING).longValueExact();
-        return Optional.of(Duration.ofSeconds(ceilSec));
+      return new BigDecimal(v.trim()).compareTo(BigDecimal.ZERO) == 0;
+    } catch (NumberFormatException ex) {
+      return false;
+    }
+  }
+
+  /**
+   * "+10", "10", "0", "0.1", "10.000" → Duration (округление вверх до секунд). BigDecimal — надёжно
+   * и без потерь точности.
+   */
+  private static Optional<Duration> parseDeltaSeconds(String v) {
+    try {
+      String s = (v.charAt(0) == '+') ? v.substring(1) : v;
+      long ceilSec = new BigDecimal(s).setScale(0, RoundingMode.CEILING).longValueExact();
+      if (ceilSec < 0L) {
+        return Optional.empty();
       }
-    } catch (NumberFormatException | ArithmeticException e) {
+      return Optional.of(Duration.ofSeconds(ceilSec));
+    } catch (RuntimeException ignore) {
       return Optional.empty();
     }
   }
 
   /**
-   * RFC1123 дата → дельта от now(clock) до неё.
+   * X-Ratelimit-Reset: попытка как дельта → иначе как epoch (секунды/миллисекунды). Эвристика:
+   * длина >= 12 символов → epoch millis, иначе epoch seconds.
+   */
+  private static Optional<Duration> parseReset(String v, Clock clock) {
+    Optional<Duration> delta = parseDeltaSeconds(v);
+    if (delta.isPresent()) {
+      return delta;
+    }
+    try {
+      String s = v.trim();
+      long n = Long.parseLong(s);
+      Instant when = (s.length() >= 12) ? Instant.ofEpochMilli(n) : Instant.ofEpochSecond(n);
+      return Optional.of(Duration.between(Instant.now(clock), when));
+    } catch (RuntimeException ignore) {
+      return Optional.empty();
+    }
+  }
+
+  /**
+   * Retry-After как RFC1123-дата.
    */
   private static Optional<Duration> parseHttpDate(String v, Clock clock) {
     try {
-      Instant when = RFC1123_US.parse(v, Instant::from);
-      return Optional.of(Duration.between(Instant.now(clock), when));
-    } catch (DateTimeParseException e) {
+      ZonedDateTime when = ZonedDateTime.parse(v, DateTimeFormatter.RFC_1123_DATE_TIME);
+      return Optional.of(Duration.between(Instant.now(clock), when.toInstant()));
+    } catch (RuntimeException e) {
       return Optional.empty();
     }
   }
 
   /**
-   * Никогда не возвращать отрицательные задержки.
+   * Никогда не возвращаем отрицательную задержку.
    */
   private static Duration nonNegative(Duration d) {
-    return (d.isNegative()) ? Duration.ZERO : d;
+    return d.isNegative() ? Duration.ZERO : d;
   }
 }
